5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1594_1804.log
== TEST (2019-03-26 16:53:39) 
-- CODE:
#Coordenadas do ponto A
Xa = float(input("Xa: "))
Ya = float(input("Ya: "))

#Coordenadas do ponto B

Xb = float(input("Xb: "))
Yb = float(input("Yb: "))

D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:09) 
-- CODE:
from math import*

#Coordenadas do ponto A
Xa = float(input("Xa: "))
Ya = float(input("Ya: "))

#Coordenadas do ponto B

Xb = float(input("Xb: "))
Yb = float(input("Yb: "))

D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
print(D)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:11) 
-- CODE:
from math import*

#Coordenadas do ponto A
Xa = float(input("Xa: "))
Ya = float(input("Ya: "))

#Coordenadas do ponto B

Xb = float(input("Xb: "))
Yb = float(input("Yb: "))

D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
print(D)
-- EXECUTION TIME:
0.179075
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.479501308256342
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773084924772409
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.1395541084682708
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:31) 
-- CODE:
from math import*

#Coordenadas do ponto A
Xa = float(input("Xa: "))
Ya = float(input("Ya: "))

#Coordenadas do ponto B

Xb = float(input("Xb: "))
Yb = float(input("Yb: "))

D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
print(D)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:50) 
-- CODE:
from math import*

#Coordenadas do ponto A
Xa = float(input("Xa: "))
Ya = float(input("Ya: "))

#Coordenadas do ponto B

Xb = float(input("Xb: "))
Yb = float(input("Yb: "))

D = sqrt((Xb - Xa)**2 + (Yb - Ya)**2)
print(round(D,3))
-- EXECUTION TIME:
0.127214
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
